# vox-to-schematic

./: .gitignore  CMakeLists.txt  README.md
V2SGUI/: MainForm.Designer.cs  MainForm.cs  Program.cs  V2SGUI.csproj  V2SGUI.sln
V2SGUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
include/: matrix.h  schematic.h  schematic_writer.h  vox.h  vox_reader.h
src/: main.cpp  matrix.cpp  schematic.cpp  schematic_writer.cpp  t_catch_main.cpp  t_schematic.cpp  t_vox.cpp  vox.cpp  vox_reader.cpp
